--- a/argocd/helm-techtrends-staging.yaml
+++ b/argocd/helm-techtrends-staging.yaml
@@ -13,5 +13,5 @@ spec:
       valueFiles:
         - values-staging.yaml
     path: helm
-    repoURL: https://github.com/waderenesas/project
+    repoURL: https://github.com/waderenesas/techtrends
     targetRevision: HEAD
